--- a/views/index.jade
+++ b/views/index.jade
@@ -5,5 +5,6 @@ html
     div#main(ng-controller="StocksAppCtrl as ctrl")
       h1#title #{title}
       input(type='text' placeholder='Search for Stocks' id="lookup")
-      p(ng-repeat="stock in ctrl.stocks") {{stock.Symbol}} {{stock.Name}}
+      p(ng-repeat="stock in ctrl.stocks") {{stock.Symbol}} {{stock.Name}} -
+        a(href=('/quote/{{stock.Symbol}}')) QUOTE
     include ./includes/scripts.jade
