--- a/views/quote.jade
+++ b/views/quote.jade
@@ -5,10 +5,24 @@ html
     div#main(ng-controller="StocksAppCtrl as ctrl")
       h1#title #{title}
       div#quoteInfo
-        ul
-          li Name: #{quoteData["Name"]}
-          li Symbol: #{quoteData.Symbol}
-          li Current Price #{quoteData.LastPrice}
-          li Daily High: #{quoteData.High} Daily Low: #{quoteData.Low}
+        h3 Name: #{quoteData["Name"]}
+        h3(ng-init='symbol="#{quoteData.Symbol}"') Symbol: #{quoteData.Symbol}
+        h3(ng-init='listPrice="#{quoteData.LastPrice}"') Current Price #{quoteData.LastPrice}
+        h3 Daily High: #{quoteData.High} Daily Low: #{quoteData.Low}
+        button(ng-click="ctrl.toggle('#buyForm')") Order Form
+        div#buyForm(style="display:none")
+          h3 Fill out the below form to purchase shares of #{quoteData.Symbol}
+          form(action="/purchase" method='POST')
+            .form-group
+              input(type='string' name="symbol" value='{{symbol}}' style="display:none")
+            .form-group
+              label Number of Shares:
+              input(type='number' name="numShares" value='0' placeholder="1" ng-model="numShares")
+              h4 Estimated Price Per Share
+              p {{listPrice}}
+              h4 Estimated purchase price in USD
+              p {{(numShares * listPrice).toFixed(2)}}
+            .form-group
+              input(type='submit', placeholder='Submit')
 
     include ./includes/scripts.jade
