--- a/views/index.jade
+++ b/views/index.jade
@@ -11,11 +11,13 @@ html
           Search below to get started
       div(ng-show='ctrl.portfolio')
         h2 Your Current Portfolio
+        button(ng-click="ctrl.getCurrentValues()") Get Current Values
         div(ng-repeat="stock in ctrl.portfolio track by $index")
           ul
             li Name: {{stock.name}}
             li Quantity Purchased: {{stock.quantity}}
             li Cost: {{stock.cost}}
+            li(ng-show='stock.currentPrice') Current Value: {{(stock.currentPrice * stock.quantity).toFixed(2)}}
 
       input(type='text' placeholder='Search for Stocks' id="lookup")
       p(ng-repeat="stock in ctrl.stocks") {{stock.Symbol}} {{stock.Name}} -
