--- a/views/purchase.jade
+++ b/views/purchase.jade
@@ -2,12 +2,13 @@ doctype html
 html
   include ./includes/head.jade
   body(ng-app="stocksApp")
-    div#main(ng-controller="StocksAppCtrl as ctrl")
-      h1#title #{title}
-      div#purchaseInfo
-        h3 Thank you, your purchase details are below:
-        p You purchased #{quantity} share(s) of #{name} (#{symbol}) for #{cost}
+    div#main(ng-controller="StocksAppCtrl as ctrl" class='container')
+      .center-align
+        h1#title #{title}
+        div#purchaseInfo.center-align
+          h3 Thank you, your purchase details are below:
+          p You purchased #{quantity} share(s) of #{name} (#{symbol}) for #{cost.toFixed(2)}
 
-        a(href='/') Back to main page
+          a(href='/') Back to main page
 
     include ./includes/scripts.jade
