--- a/views/includes/head.jade
+++ b/views/includes/head.jade
@@ -1,3 +1,4 @@
 head
   title= title
+  link(rel='stylesheet', href='/vender/Materialize/dist/css/materialize.min.css')
   link(rel='stylesheet', href='/styles/styles.css')
