--- a/views/includes/scripts.jade
+++ b/views/includes/scripts.jade
@@ -1,3 +1,4 @@
 script(src='/vender/jquery/dist/jquery.min.js')
+script(src='/vender/Materialize/dist/js/materialize.js')
 script(src='/vender/angular/angular.min.js')
 script(src='/scripts/client.js')
